<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soul.contadorpropina.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@android:color/darker_gray"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cardViewCuenta">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Views de Cuenta -->
            <TextView
                android:text="@string/lblCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblCuenta"
                android:layout_alignParentRight="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtCuenta"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/lblEuros1"
                android:layout_marginRight="30dp"
                android:layout_below="@id/lblCuenta"
                android:gravity="end"
                android:text="@string/txtCuentaDefault"
                />
            <TextView
                android:text="@string/lblEuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblEuros1"
                android:layout_below="@id/lblCuenta"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/txtCuenta"
                android:minWidth="25dp"
                />
            <TextView
                android:id="@+id/lblPropina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/lblCuenta"
                android:layout_alignRight="@+id/lblCuenta"
                android:layout_below="@+id/txtCuenta"
                android:layout_marginBottom="15dp"
                android:text="@string/lblPropina"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtPorcPropina"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_below="@id/lblPropina"
                android:gravity="end"
                android:text="@string/porcentajePropinaDefault"
                />
            <TextView
                android:text="@string/lblPorcientoMedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblPorcentajeMitad"
                android:layout_below="@id/lblPropina"
                android:layout_alignBaseline="@id/txtPropina"
                android:layout_toLeftOf="@id/txtPropina"
                android:layout_toRightOf="@id/txtPorcPropina"
                android:minWidth="25dp"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtPropina"
                android:layout_toRightOf="@id/txtPorcPropina"
                android:layout_marginRight="30dp"
                android:layout_below="@id/lblPropina"
                android:gravity="end"
                android:text="@string/txtCuentaDefault"
                />
            <TextView
                android:id="@+id/lblPorcentajePropina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignLeft="@+id/lblPropina"
                android:layout_alignEnd="@id/txtPorcPropina"
                android:layout_below="@+id/txtCuenta"
                android:layout_marginBottom="15dp"
                android:text="@string/lblPorcentajePropina"
                android:layout_alignRight="@id/txtPorcPropina"
                android:gravity="end"
                />
            <TextView
                android:text="@string/lblEuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblEurosPropina"
                android:layout_below="@id/lblPropina"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/txtPropina"
                android:minWidth="25dp"
                />
            <TextView
                android:text="@string/Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblTotal"
                android:layout_below="@id/txtPropina"
                android:layout_alignParentRight="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtTotal"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/lblEurosTotal"
                android:layout_marginRight="30dp"
                android:layout_below="@id/lblTotal"
                android:gravity="end"
                android:text="@string/txtCuentaDefault"
                />
            <TextView
                android:text="@string/lblEuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblEurosTotal"
                android:layout_below="@id/lblCuenta"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/txtTotal"
                android:minWidth="25dp"
                />
            <Button
                android:id="@+id/btnRedondearTotal"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/txtTotal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/redondearTotal"
                />

            <Button
                android:id="@+id/btnLimpiarTotal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnRedondearTotal"
                android:layout_toLeftOf="@+id/btnRedondearTotal"
                android:layout_toStartOf="@+id/btnRedondearTotal"
                android:text="@string/limpiar" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <!--CARD VIEW COMENSALES-->
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@android:color/darker_gray"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/cardViewCuenta"
        android:id="@+id/cardViewComensales" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/lblComensal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/comensales"
                android:layout_alignEnd="@id/txtComensales"
                android:layout_alignRight="@id/txtComensales" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtComensales"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_below="@id/lblComensal"
                android:gravity="end"
                android:text="@string/comensalesDefecto" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtPvPPorComensal"
                android:layout_toRightOf="@id/txtComensales"
                android:layout_marginRight="30dp"
                android:layout_below="@id/lblComensal"
                android:gravity="end"
                android:text="@string/txtCuentaDefault" />
            <TextView
                android:id="@+id/lblComensales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignLeft="@+id/lblComensal"
                android:layout_alignEnd="@id/txtPvPPorComensal"
                android:layout_marginBottom="15dp"
                android:text="@string/porComensal"
                android:layout_alignRight="@id/txtPvPPorComensal"
                android:gravity="end" />
            <TextView
                android:text="@string/lblEuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblEurosComensales"
                android:layout_below="@id/lblComensal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/txtPvPPorComensal"
                android:minWidth="25dp" />
            <Button
                android:id="@+id/btnRedondearComensales"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/txtComensales"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/redondearTotal"
                />

            <Button
                android:id="@+id/btnLimpiarComensales"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnRedondearComensales"
                android:layout_toLeftOf="@+id/btnRedondearComensales"
                android:layout_toStartOf="@+id/btnRedondearComensales"
                android:text="@string/limpiar" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
